--- a/faultSlip/example/stress_Calc_example.ipynb
+++ b/faultSlip/example/stress_Calc_example.ipynb
@@ -1417,7 +1417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1 | packaged by conda-forge | (main, Dec 16 2021, 18:00:56) [Clang 11.1.0 ]"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
